# deepface_fastapi

./: .gitignore  Dockerfile  main.py  pyproject.toml
api/: api.py  utlity.py
detection/: detection.py
tests/: api_test.py  detection_test.py
